@@ -168,7 +168,9 @@ class ModeManager(QObject):
                             "{}".format(curmode, utils.qualname(parser)))
         handled = parser.handle(event)
 
-        is_non_alnum = bool(event.modifiers()) or not event.text().strip()
+        is_non_alnum = (
+            event.modifiers() not in (Qt.NoModifier, Qt.ShiftModifier) or
+            not event.text().strip())
         focus_widget = QApplication.instance().focusWidget()
         is_tab = event.key() in (Qt.Key_Tab, Qt.Key_Backtab)
 
